<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:githubClientApp="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gd_main_background"
    tools:context=".ui.main.MainActivity">

    <ImageView
        android:id="@+id/iv_main_github_mark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/main_iv_github_mark"
        android:src="@drawable/ic_main_github_mark"
        githubClientApp:layout_constraintBottom_toBottomOf="parent"
        githubClientApp:layout_constraintLeft_toLeftOf="parent"
        githubClientApp:layout_constraintRight_toRightOf="parent"
        githubClientApp:layout_constraintTop_toTopOf="parent"
        githubClientApp:layout_constraintVertical_bias="0.281" />

    <TextView
        android:id="@+id/tv_main_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        android:text="@string/main_tv_header"
        githubClientApp:layout_constraintHorizontal_bias="0.497"
        githubClientApp:layout_constraintLeft_toLeftOf="parent"
        githubClientApp:layout_constraintRight_toRightOf="parent"
        githubClientApp:layout_constraintTop_toBottomOf="@id/iv_main_github_mark" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/et_main_username_container"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        githubClientApp:layout_constraintLeft_toLeftOf="parent"
        githubClientApp:layout_constraintRight_toRightOf="parent"
        githubClientApp:layout_constraintTop_toBottomOf="@id/tv_main_header">

        <EditText
            android:id="@+id/et_main_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/main_et_username"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_main_load_repositories"
        style="@style/MainButton"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/main_btn_search"
        githubClientApp:layout_constraintLeft_toLeftOf="parent"
        githubClientApp:layout_constraintRight_toRightOf="parent"
        githubClientApp:layout_constraintTop_toBottomOf="@id/et_main_username_container" />

    <ProgressBar
        android:id="@+id/pb_main_loading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:visibility="invisible"
        githubClientApp:layout_constraintLeft_toLeftOf="parent"
        githubClientApp:layout_constraintRight_toRightOf="parent"
        githubClientApp:layout_constraintTop_toBottomOf="@id/btn_main_load_repositories" />

</android.support.constraint.ConstraintLayout>